# gpt3-rs-cli

./: Cargo.toml
src/: lib.rs  main.rs
