[package]
name = "correct"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap ={ version="4.0.18",features =["derive"]} 
reqwest = { version = "0.11", features = ["json"] } 
tokio = { version = "1", features = ["full"] }
mime = "0.3"
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
serde = { version = "1.0", features = ["derive"] }
